# Mario

./: .gitattributes  .gitignore  Build.bat  Build.lnk  Clean.Bat  Clean.bat  Clean.lnk  Generate.bat  GenerateAndBuild.bat  README.md  SetupWorkspace.Bat  SetupWorkspace.bat
Depot/: CMakeLists.txt
Depot/BuildScripts/: Build.bat  Build.py  CMake.py  Clean.py  CommonCommands.py  CommonDirectories.py  CommonDirectoryVars.bat  Config.bat  Config.py  DeleteDirIfExists.bat  FunctionTiming.py  Generate.bat  Generate.py  GenerateAndBuild.bat  GenerateAndBuild.py  SetupWorkspace.py  TimeBuild.bat
Depot/CMakeScripts/: AddGlobbedFiles.cmake  BuildFlags.cmake  CMakeLists.txt
Depot/Data/: CMakeLists.txt  Data.cmake
Depot/Git/Hooks/: pre-commit
Depot/Source/: CMakeLists.txt
Depot/Source/Core/: CMakeLists.txt
Depot/Source/Core/Assert/: Assert.cpp  Assert.h  AssertHandlers.cpp  AssertHandlers.h
Depot/Source/Core/Log/: Log.cpp  Log.h  Log.test.cpp  LogHandlers.cpp  LogHandlers.h
Depot/Source/Core/Macro/: MacroCommon.h  MacroCommon.test.cpp
Depot/Source/Core/Test/: main.cpp
Depot/Source/Game/: CMakeLists.txt
Depot/Source/Game/Model/: test.cpp
Depot/Source/Game/Model/Network/: Message.cpp  Node.h  NodeConnection.h  SocketTest.cpp
depot/: CMakeAddGlobbedFiles.cmake  CMakeAddGlobbedFiles.txt  CMakeLists.txt
depot/buildScripts/: Build.bat  Clean.bat  CommonCommands.bat  CommonDirectoryVars.bat  Config.bat  CreateDirIfMissing.bat  DeleteDirIfExists.bat  ExecutionTime.bat  Generate.bat  GenerateAndBuild.bat  TimeBuild.bat
depot/source/: CMakeAddGlobbedFiles.txt  CMakeBuildFlags.txt  CMakeLists.txt
depot/source/game/: CMakeLists.txt  gametest.cpp  test.cpp
depot/source/game/model/: CMakeLists.txt
depot/source/game/model/network/: Id.cpp  Id.h  Message.h  Node.cpp  Node.h  NodeConnection.cpp  NodeConnection.h  SocketTest.cpp
depot/source/test/: CMakeLists.txt  test.cpp
